--- a/Topics/Printing data/The result of a Tic-Tac-Toe game/task.html
+++ b/Topics/Printing data/The result of a Tic-Tac-Toe game/task.html
@@ -1,5 +1,5 @@
 <h2>The result of a Tic-Tac-Toe game</h2>
-<p>You need to write a program to display the resulting grid of a Tic-Tac-Toe game.</p>
+<p></p><p>You need to write a program to display the resulting grid of a Tic-Tac-Toe game.</p>
 <p>The grid is shown below.</p>
 <p> </p>
 <pre><code class="language-java">O X X
